force-app/main/default/objects/Broker_Registration__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <label>Account Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>