force-app/main/default/objects/Broker_Registration__c/fields/Accounts_Finance_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Finance_Email_ID__c</fullName>
    <label>Accounts/Finance Email ID</label>
    <type>Email</type>
</CustomField>