force-app/main/default/objects/Broker_Registration__c/fields/Agreement_Created_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Created_Sent_Date__c</fullName>
    <label>Agreement Created/Sent Date</label>
    <type>Date</type>
</CustomField>