force-app/main/default/objects/Broker_Registration__c/fields/Agreement_Manager_Esc_Sent__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Manager_Esc_Sent__c</fullName>
    <label>Agreement Manager Esc Sent</label>
    <type>DateTime</type>
</CustomField>