force-app/main/default/objects/Broker_Registration__c/fields/All_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>All_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>