force-app/main/default/objects/Broker_Registration__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <label>Owner&apos;s Email</label>
    <type>Email</type>
</CustomField>