force-app/main/default/objects/Broker_Registration__c/fields/Alternate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Address__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>