force-app/main/default/objects/Broker_Registration__c/fields/Alternate_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile__c</fullName>
    <label>Alternate Mobile</label>
    <length>15</length>
    <type>Text</type>
</CustomField>