force-app/main/default/objects/Broker_Registration__c/fields/Audit_Head_Esc_Sent__c.field-meta.xml
<CustomField>
    <fullName>Audit_Head_Esc_Sent__c</fullName>
    <label>Audit Head Esc Sent</label>
    <type>DateTime</type>
</CustomField>