force-app/main/default/objects/Broker_Registration__c/fields/Broker_Category__c.field-meta.xml
<CustomField>
    <fullName>Broker_Category__c</fullName>
    <label>Broker Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker - RERA</fullName>
            </value>
            <value>
                <fullName>Broker - UAE</fullName>
            </value>
            <value>
                <fullName>Broker - Intnl</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - UAE - Individual</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - Intnl - Individual</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - UAE - Company</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - Intnl - Company</fullName>
            </value>
            <value>
                <fullName>Broker – Intnl</fullName>
                <isActive>false</isActive>
                <label>Broker – Intnl</label>
            </value>
            <value>
                <fullName>Broker – RERA</fullName>
                <isActive>false</isActive>
                <label>Broker – RERA</label>
            </value>
            <value>
                <fullName>Broker – UAE</fullName>
                <isActive>false</isActive>
                <label>Broker – UAE</label>
            </value>
            <value>
                <fullName>Sobha Connect – Intnl – Company</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect – Intnl – Company</label>
            </value>
            <value>
                <fullName>Sobha Connect – Intnl – Individual</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect – Intnl – Individual</label>
            </value>
            <value>
                <fullName>Sobha Connect – Intnl– Company</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect – Intnl– Company</label>
            </value>
            <value>
                <fullName>Sobha Connect – UAE – Company</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect – UAE – Company</label>
            </value>
            <value>
                <fullName>Sobha Connect – UAE – Individual</fullName>
                <isActive>false</isActive>
                <label>Sobha Connect – UAE – Individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>