force-app/main/default/objects/Broker_Registration__c/fields/Broker_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Created_Date__c</fullName>
    <label>Broker Created Date</label>
    <type>DateTime</type>
</CustomField>