force-app/main/default/objects/Broker_Registration__c/fields/Broker_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Sign_Date__c</fullName>
    <label>Broker Sign Date</label>
    <type>Date</type>
</CustomField>