force-app/main/default/objects/Broker_Registration__c/fields/CHRM_Head_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CHRM_Head_Approval_Date__c</fullName>
    <label>Channel Relations TL Approval Date</label>
    <type>Date</type>
</CustomField>