force-app/main/default/objects/Broker_Registration__c/fields/CHRM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CHRM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Relations Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>