force-app/main/default/objects/Broker_Registration__c/fields/CHRM_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CHRM_Manager_Email__c</fullName>
    <label>Channel Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>