force-app/main/default/objects/Broker_Registration__c/fields/City_Province__c.field-meta.xml
<CustomField>
    <fullName>City_Province__c</fullName>
    <label>City/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>