force-app/main/default/objects/Broker_Registration__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan</fullName>
                <label>AFGHANISTAN</label>
            </value>
            <value>
                <fullName>Albania</fullName>
                <label>ALBANIA</label>
            </value>
            <value>
                <fullName>Algeria</fullName>
                <label>ALGERIA</label>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
                <label>ARMENIA</label>
            </value>
            <value>
                <fullName>Australia</fullName>
                <label>AUSTRALIA</label>
            </value>
            <value>
                <fullName>Austria</fullName>
                <label>AUSTRIA</label>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
                <label>AZERBAIJAN</label>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
                <label>BELARUS</label>
            </value>
            <value>
                <fullName>Belgium</fullName>
                <label>BELGIUM</label>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Bhutan</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
                <label>BRAZIL</label>
            </value>
            <value>
                <fullName>Brunei</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
                <label>BULGARIA</label>
            </value>
            <value>
                <fullName>Burkina Faso</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Côte d&apos;Ivoire</fullName>
            </value>
            <value>
                <fullName>Cabo Verde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>