force-app/main/default/objects/Broker_Registration__c/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Channel_Partner__c.Black_listed_user__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Broker Registrations</relationshipLabel>
    <relationshipName>Broker_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>