force-app/main/default/objects/Broker_Registration__c/fields/crmOps__c.field-meta.xml
<CustomField>
    <fullName>crmOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Ops</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Registrations2</relationshipName>
    <type>Lookup</type>
</CustomField>