force-app/main/default/objects/Broker_Registration__c/fields/Days_since_Agreement_shared__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Agreement_shared__c</fullName>
    <formula>IF( NOT(ISNULL(Agreement_Created_Sent_Date__c)), TODAY() -  Agreement_Created_Sent_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Agreement shared</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>