force-app/main/default/objects/Broker_Registration__c/fields/Email_Category__c.field-meta.xml
<CustomField>
    <fullName>Email_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Category</label>
    <type>Checkbox</type>
</CustomField>