force-app/main/default/objects/Broker_Registration__c/fields/Email_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient_Type__c</fullName>
    <description>Indicates whether the Registration Link email was sent to a Broker or a Channel Manager.</description>
    <label>Email Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Channel Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>