force-app/main/default/objects/Broker_Registration__c/fields/Email_Sent_07_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_07_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent 07 Days</label>
    <type>Checkbox</type>
</CustomField>