force-app/main/default/objects/Broker_Registration__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <formula>IF( RecordType.Name =&apos;Renewal&apos;, &apos;Renewal&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subject</label>
    <type>Text</type>
</CustomField>