force-app/main/default/objects/Broker_Registration__c/fields/Escalation_Email_10_days__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Email_10_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Email - 10 days</label>
    <type>Checkbox</type>
</CustomField>