force-app/main/default/objects/Broker_Registration__c/fields/Extension_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Extension_Status_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension Status Updated</label>
    <type>Checkbox</type>
</CustomField>