force-app/main/default/objects/Broker_Registration__c/fields/Field_Update_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Field_Update_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Update Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Registrations5</relationshipName>
    <type>Lookup</type>
</CustomField>