force-app/main/default/objects/Broker_Registration__c/fields/frmBrokerRegistrationName__c.field-meta.xml
<CustomField>
    <fullName>frmBrokerRegistrationName__c</fullName>
    <formula>IF( OR(ISPICKVAL( Broker_Category__c , &apos;Sobha Connect - UAE - Individual&apos;), ISPICKVAL( Broker_Category__c , &apos;Sobha Connect - Intnl - Individual&apos;)), Name_as_per_passport__c , Name_as_per_trade_license__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>frmBrokerRegistrationName</label>
    <type>Text</type>
</CustomField>