force-app/main/default/objects/Broker_Registration__c/fields/frmCHRMMgrName__c.field-meta.xml
<CustomField>
    <fullName>frmCHRMMgrName__c</fullName>
    <formula>CHRM_Manager__r.FirstName + &quot; &quot; +  CHRM_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>frmCHRMMgrName</label>
    <type>Text</type>
</CustomField>