force-app/main/default/objects/Broker_Registration__c/fields/Is_UAE_Category__c.field-meta.xml
<CustomField>
    <fullName>Is_UAE_Category__c</fullName>
    <formula>OR( ISPICKVAL( Broker_Category__c , &apos;Broker - UAE&apos;), 
ISPICKVAL( Broker_Category__c , &apos;Sobha Connect - UAE - Individual&apos;),
ISPICKVAL( Broker_Category__c , &apos;Sobha Connect - UAE - Company&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is UAE Category</label>
    <type>Checkbox</type>
</CustomField>