force-app/main/default/objects/Broker_Registration__c/fields/Is_ValidAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidAccountEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidAccountEmail</label>
    <type>Checkbox</type>
</CustomField>