force-app/main/default/objects/Broker_Registration__c/fields/Is_ValidEmail__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidEmail</label>
    <type>Checkbox</type>
</CustomField>