force-app/main/default/objects/Broker_Registration__c/fields/Is_ValidOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidOwnerEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidOwnerEmail</label>
    <type>Checkbox</type>
</CustomField>