force-app/main/default/objects/Broker_Registration__c/fields/Is_ValidTelephone__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidTelephone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidTelephone</label>
    <type>Checkbox</type>
</CustomField>