force-app/main/default/objects/Broker_Registration__c/fields/list_of_missing_documents__c.field-meta.xml
<CustomField>
    <fullName>list_of_missing_documents__c</fullName>
    <label>list of missing documents</label>
    <type>TextArea</type>
</CustomField>