force-app/main/default/objects/Broker_Registration__c/fields/Mandatory_Documents_Missing__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Documents_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Documents Missing?</label>
    <type>Checkbox</type>
</CustomField>