force-app/main/default/objects/Broker_Registration__c/fields/Missing_Documents__c.field-meta.xml
<CustomField>
    <fullName>Missing_Documents__c</fullName>
    <label>Missing Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Broker_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Form</fullName>
            </value>
            <value>
                <fullName>RERA Certificate</fullName>
            </value>
            <value>
                <fullName>Trade License</fullName>
            </value>
            <value>
                <fullName>VAT Certificate</fullName>
            </value>
            <value>
                <fullName>Identification Documents</fullName>
            </value>
            <value>
                <fullName>Passport Copy</fullName>
            </value>
            <value>
                <fullName>Visa Copy</fullName>
            </value>
            <value>
                <fullName>Emirates ID</fullName>
            </value>
            <value>
                <fullName>POA/MOA</fullName>
            </value>
            <value>
                <fullName>Translated Company Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>