force-app/main/default/objects/Broker_Registration__c/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <formula>IF(AND($UserRole.Name=&apos;CRM TL 1&apos;,Owner:User.UserRole.Name=&apos;Channel relationship manager&apos;),True, 
IF(AND($UserRole.Name=&apos;CRM TL 2&apos;,Owner:User.UserRole.Name=&apos;Channel Relationship Manager 2&apos;),True,
IF(AND($UserRole.Name=&apos;CRM TL3&apos;,Owner:User.UserRole.Name=&apos;Channel Relationship Manager 3&apos;),True,
IF(AND($UserRole.Name=&apos;CRM TL4&apos;,Owner:User.UserRole.Name=&apos;Channel Relationship Manager 4&apos;),True,False))))</formula>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>