force-app/main/default/objects/Broker_Registration__c/fields/Name_Change_Details_of_the_Broker__c.field-meta.xml
<CustomField>
    <fullName>Name_Change_Details_of_the_Broker__c</fullName>
    <label>Name Change Details of the Broker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>