force-app/main/default/objects/Broker_Registration__c/fields/No_of_Authorised_Signatories__c.field-meta.xml
<CustomField>
    <fullName>No_of_Authorised_Signatories__c</fullName>
    <label>No. of Authorised Signatories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>