force-app/main/default/objects/Broker_Registration__c/fields/Old_Agreement_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Agreement_Expiry_Date__c</fullName>
    <formula>Parent_Record__r.Broker_Expiry_Date__c</formula>
    <label>Old Agreement Expiry Date</label>
    <type>Date</type>
</CustomField>