force-app/main/default/objects/Broker_Registration__c/fields/Owner_s_Email_M__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Email_M__c</fullName>
    <label>Owner&apos;s Email (M)</label>
    <type>TextArea</type>
</CustomField>