force-app/main/default/objects/Broker_Registration__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Broker_Registration__c</referenceTo>
    <relationshipLabel>Broker Registrations (Parent Record)</relationshipLabel>
    <relationshipName>Parent_Record</relationshipName>
    <type>Lookup</type>
</CustomField>