force-app/main/default/objects/Broker_Registration__c/fields/Primary_Email_E__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_E__c</fullName>
    <label>Primary Email (E)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>