force-app/main/default/objects/Broker_Registration__c/fields/Primary_Email_M__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_M__c</fullName>
    <label>Primary Email (M)</label>
    <type>TextArea</type>
</CustomField>