force-app/main/default/objects/Broker_Registration__c/fields/Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link__c</fullName>
    <formula>$Label.Broker_Registration_Site_URL &amp; &apos;?id=&apos; &amp; Id</formula>
    <label>Registration Link</label>
    <type>Text</type>
</CustomField>