force-app/main/default/objects/Broker_Registration__c/fields/Registration_Link_Expiry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link_Expiry_Date_Time__c</fullName>
    <label>Registration Link Expiry Date/Time</label>
    <type>DateTime</type>
</CustomField>