force-app/main/default/objects/Broker_Registration__c/fields/Renewal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Record_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Record</label>
    <referenceTo>Broker_Registration__c</referenceTo>
    <relationshipLabel>Broker Registrations</relationshipLabel>
    <relationshipName>Renewal_Record_Id</relationshipName>
    <type>Lookup</type>
</CustomField>