force-app/main/default/objects/Broker_Registration__c/fields/Reporting_manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Registrations4</relationshipName>
    <type>Lookup</type>
</CustomField>