force-app/main/default/objects/Broker_Registration__c/fields/Second_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Second_Signatory_Email__c</fullName>
    <label>Second Signatory Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>