force-app/main/default/objects/Broker_Registration__c/fields/Second_Signatory_Email_M__c.field-meta.xml
<CustomField>
    <fullName>Second_Signatory_Email_M__c</fullName>
    <label>Second Signatory Email (M)</label>
    <type>TextArea</type>
</CustomField>