force-app/main/default/objects/Broker_Registration__c/fields/Secondary_Mobile_Number_E__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_Number_E__c</fullName>
    <label>Secondary Mobile Number (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>