force-app/main/default/objects/Broker_Registration__c/fields/Secondary_Mobile_Number_M__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_Number_M__c</fullName>
    <label>Secondary Mobile Number (M)</label>
    <type>TextArea</type>
</CustomField>