force-app/main/default/objects/Broker_Registration__c/fields/Skip_Broker_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Skip_Broker_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, Email notification to Broker will not be triggered</description>
    <label>Skip Broker Email Notification</label>
    <type>Checkbox</type>
</CustomField>